--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -42,6 +42,7 @@
     <TypeScriptCompile Include="src\def\Aliases.ts" />
     <TypeScriptCompile Include="src\def\Const.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefAction.ts" />
+    <TypeScriptCompile Include="src\def\elements\IDefAura.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefEntities.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefMetadata.ts" />
     <TypeScriptCompile Include="src\def\elements\IDefTargetDefinition.ts" />
@@ -86,7 +87,9 @@
     <TypeScriptCompile Include="src\hs\event\TurnEvents.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
+    <TypeScriptCompile Include="src\hs\factories\PhaseActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\TechActionFactory.ts" />
+    <TypeScriptCompile Include="src\hs\helpers\AuraUpdate.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\core\DrawCard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\core\PlayCardSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\core\PlayMinionSequence.ts" />
@@ -102,10 +105,8 @@
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\Battlecry.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\DeathCreationStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\EquipWeapon.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\GainArmor.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\main\SummonMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\AddGeneratedCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\DestroyCardInPlay.ts" />
@@ -118,17 +119,21 @@
     <TypeScriptCompile Include="src\hs\hsActions\outdated\Sequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\ShuffleGeneratedCardIntoDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\outdated\SilenceAMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\AuraUpdateStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\AuraUpdateStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\DeathCreationStep.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\DeathPhase.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\OutermostPhaseEnd.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\PlayPhase.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\EquipHeroPower.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\Fatigue.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\PayCostAndRemoveFromHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\ShuffleDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\AddTag.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\AttachEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\ChooseAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\DetachEnchantment.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\DispatchEvent.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\DispatchEvents.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\technical\MakeChoiceAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\RegisterTrigger.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\RemoveTag.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\UnregisterTrigger.ts" />
@@ -141,6 +146,7 @@
     <TypeScriptCompile Include="src\hs\model\card\Player.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Spell.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Weapon.ts" />
+    <TypeScriptCompile Include="src\hs\model\mechanic\Aura.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\Enchantment.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\AttackHealthEnchantment.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\enchantments\TagManagerEnchantment.ts" />
