--- a/HsCardSets/HsCardSets.csproj
+++ b/HsCardSets/HsCardSets.csproj
@@ -26,14 +26,12 @@
     <Folder Include="src\Blackrock Mountain\Mage\" />
     <Folder Include="src\Blackrock Mountain\Neutral\" />
     <Folder Include="src\Blackrock Mountain\Paladin\" />
-    <Folder Include="src\Blackrock Mountain\Palladin\" />
     <Folder Include="src\Blackrock Mountain\Priest\" />
     <Folder Include="src\Blackrock Mountain\Ranger\" />
     <Folder Include="src\Blackrock Mountain\Rouge\" />
     <Folder Include="src\Blackrock Mountain\Shaman\" />
     <Folder Include="src\Blackrock Mountain\Warlock\" />
     <Folder Include="src\Blackrock Mountain\Warrior\" />
-    <Folder Include="src\Classic\Palladin\" />
     <Folder Include="src\Classic\Ranger\" />
     <Folder Include="src\Classic\Rouge\" />
     <Folder Include="src\Classic\Shaman\" />
@@ -42,7 +40,6 @@
     <Folder Include="src\Curse of Naxxramas\Mage\" />
     <Folder Include="src\Curse of Naxxramas\Neutral\" />
     <Folder Include="src\Curse of Naxxramas\Paladin\" />
-    <Folder Include="src\Curse of Naxxramas\Palladin\" />
     <Folder Include="src\Curse of Naxxramas\Priest\" />
     <Folder Include="src\Curse of Naxxramas\Ranger\" />
     <Folder Include="src\Curse of Naxxramas\Rouge\" />
@@ -52,7 +49,6 @@
     <Folder Include="src\Goblin vs Gnomes\Mage\" />
     <Folder Include="src\Goblin vs Gnomes\Neutral\" />
     <Folder Include="src\Goblin vs Gnomes\Paladin\" />
-    <Folder Include="src\Goblin vs Gnomes\Palladin\" />
     <Folder Include="src\Goblin vs Gnomes\Priest\" />
     <Folder Include="src\Goblin vs Gnomes\Ranger\" />
     <Folder Include="src\Goblin vs Gnomes\Rouge\" />
@@ -62,7 +58,6 @@
     <Folder Include="src\The Grand Tournament\Druid\" />
     <Folder Include="src\The Grand Tournament\Neutral\" />
     <Folder Include="src\The Grand Tournament\Paladin\" />
-    <Folder Include="src\The Grand Tournament\Palladin\" />
     <Folder Include="src\The Grand Tournament\Priest\" />
     <Folder Include="src\The Grand Tournament\Ranger\" />
     <Folder Include="src\The Grand Tournament\Rouge\" />
@@ -72,7 +67,6 @@
     <Folder Include="src\The League of Explorers\Druid\" />
     <Folder Include="src\The League of Explorers\Neutral\" />
     <Folder Include="src\The League of Explorers\Paladin\" />
-    <Folder Include="src\The League of Explorers\Palladin\" />
     <Folder Include="src\The League of Explorers\Priest\" />
     <Folder Include="src\The League of Explorers\Ranger\" />
     <Folder Include="src\The League of Explorers\Rouge\" />
@@ -83,7 +77,6 @@
     <Folder Include="src\Whispers of the Old Gods\Mage\" />
     <Folder Include="src\Whispers of the Old Gods\Neutral\" />
     <Folder Include="src\Whispers of the Old Gods\Paladin\" />
-    <Folder Include="src\Whispers of the Old Gods\Palladin\" />
     <Folder Include="src\Whispers of the Old Gods\Priest\" />
     <Folder Include="src\Whispers of the Old Gods\Ranger\" />
     <Folder Include="src\Whispers of the Old Gods\Rouge\" />
@@ -94,7 +87,11 @@
   <ItemGroup>
     <TypeScriptCompile Include="src\Blackrock Mountain\Set.ts" />
     <TypeScriptCompile Include="src\Classic\Druid\Swipe.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Arcane_Intellect.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Arcane_Missiles.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Flamestrike.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Fireball.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Frost_Nova.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Frost_Bolt.ts" />
     <TypeScriptCompile Include="src\Classic\Neutral\Abomination.ts" />
     <TypeScriptCompile Include="src\Classic\Neutral\Amani_Berserker.ts" />
