--- a/HsCardSets/HsCardSets.csproj
+++ b/HsCardSets/HsCardSets.csproj
@@ -89,15 +89,20 @@
     <TypeScriptCompile Include="src\Classic\Druid\Swipe.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Arcane_Explosion.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Arcane_Intellect.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Cone_Of_Cold.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Arcane_Missiles.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Blizzard.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Pyroblast.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Flamestrike.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Fireball.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Ethereal_Arcanist.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Sheep_Token.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Polymorph.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Frost_Nova.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Frost_Bolt.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Mirror_Image.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Mirror_Image_Token.ts" />
+    <TypeScriptCompile Include="src\Classic\Mage\Archmage_Antonidas.ts" />
     <TypeScriptCompile Include="src\Classic\Mage\Water_Elemental.ts" />
     <TypeScriptCompile Include="src\Classic\Neutral\Abomination.ts" />
     <TypeScriptCompile Include="src\Classic\Neutral\Amani_Berserker.ts" />
