Mage cards, combat sequence, object validator

--- a/HsLogic/HsLogic.csproj
+++ b/HsLogic/HsLogic.csproj
@@ -22,13 +22,11 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\hs\hsActions\old\param\" />
-  </ItemGroup>
-  <ItemGroup>
     <TypeScriptCompile Include="src\commons\ClassUtils.ts" />
     <TypeScriptCompile Include="src\commons\Collection.ts" />
     <TypeScriptCompile Include="src\commons\CommonUtils.ts" />
     <TypeScriptCompile Include="src\commons\MathUtils.ts" />
+    <TypeScriptCompile Include="src\commons\ObjectValidator.ts" />
     <TypeScriptCompile Include="src\commons\StringUtils.ts" />
     <TypeScriptCompile Include="src\core\action\ActionStack.ts" />
     <TypeScriptCompile Include="src\core\action\IAction.ts" />
@@ -48,16 +46,17 @@
     <TypeScriptCompile Include="src\def\helper\targetFinder\builders\IEntitySetBuilder.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\builders\TriggerSetBuilder.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\filters\DefMinionFilter.ts" />
-    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TechFilters.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\filters\Filters.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\filters\StandardFilters.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TargetFilters.ts" />
+    <TypeScriptCompile Include="src\def\helper\targetFinder\filters\TechFilters.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\ISetBuilder.ts" />
     <TypeScriptCompile Include="src\def\helper\targetFinder\TargetFinder.ts" />
     <TypeScriptCompile Include="src\def\mechanics\aura\SpellDamage.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\SecretsTrigger.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Deathrattle.ts" />
-    <TypeScriptCompile Include="src\def\mechanics\Enchantment.ts" />
     <TypeScriptCompile Include="src\def\mechanics\EffectManager.ts" />
+    <TypeScriptCompile Include="src\def\mechanics\Enchantment.ts" />
     <TypeScriptCompile Include="src\def\mechanics\Enrage.ts" />
     <TypeScriptCompile Include="src\def\mechanics\LifeLink.ts" />
     <TypeScriptCompile Include="src\def\mechanics\onPlayMechanics\AttackHealthEnchant.ts" />
@@ -78,6 +77,7 @@
     <TypeScriptCompile Include="src\hs\core\context\IContextUtils.ts" />
     <TypeScriptCompile Include="src\hs\core\context\LethalMonitor.ts" />
     <TypeScriptCompile Include="src\hs\core\context\PowerManager.ts" />
+    <TypeScriptCompile Include="src\hs\event\CombatEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\DamageEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\DrawCardEvents.ts" />
     <TypeScriptCompile Include="src\hs\event\HealEvents.ts" />
@@ -86,16 +86,12 @@
     <TypeScriptCompile Include="src\hs\factories\HsEntityFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\PhaseActionFactory.ts" />
     <TypeScriptCompile Include="src\hs\factories\TechActionFactory.ts" />
-    <TypeScriptCompile Include="src\hs\helpers\EffectManager.ts" />
     <TypeScriptCompile Include="src\hs\helpers\AuraUpdate.ts" />
-    <TypeScriptCompile Include="src\hs\helpers\ZoneLimit.ts" />
+    <TypeScriptCompile Include="src\hs\helpers\EffectManager.ts" />
     <TypeScriptCompile Include="src\hs\helpers\RefreshEnchantments.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\DrawCards.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\DrawCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\PlayCardSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\PlayMinionSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\PlaySpellSequence.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\main\PlayWeaponSequence.ts" />
+    <TypeScriptCompile Include="src\hs\helpers\CharacterHelper.ts" />
+    <TypeScriptCompile Include="src\hs\helpers\ZoneLimit.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\BasicParam.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndDealDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\CalculateAndSplitDamage.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\damage\DamageCommons.ts" />
@@ -105,34 +101,45 @@
     <TypeScriptCompile Include="src\hs\hsActions\heal\CalculateAndSplitHeal.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\HealCommons.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\heal\MultistepHeal.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\Battlecry.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\EquipWeapon.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\TransformMinion.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\GainArmor.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\SummonMinion.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\CombatSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\DrawCard.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\DrawCards.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\PlayCardSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\PlayMinionSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\PlaySpellSequence.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\main\PlayWeaponSequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\AddGeneratedCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\DestroyCardInPlay.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\Discard.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\makeChoice\ChooseSingleTarget.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\MillCard.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\BasicParam.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\PutCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\ReturnCardIntoHandFromPlayZone.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\Sequence.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\ShuffleGeneratedCardIntoDeck.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\old\SilenceAMinion.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\CombatPhase.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\phase\CombatPreparationPhase.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\phase\AuraUpdateStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\phase\DeathCreationStep.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\phase\DeathPhase.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\phase\OutermostPhaseEnd.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\phase\PlayPhase.ts" />
-    <TypeScriptCompile Include="src\hs\hsActions\secondary\Freeze.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\Battlecry.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\EquipHeroPower.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\EquipWeapon.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\Fatigue.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\Freeze.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\RemoveSecret.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\GainArmor.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\PayCostAndRemoveFromHand.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\PutCardIntoHand.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\secondary\ShuffleDeck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\SummonMinion.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\WinLossCheck.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\secondary\TransformMinion.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\AddTag.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\AttachEnchantment.ts" />
+    <TypeScriptCompile Include="src\hs\hsActions\technical\CancelAction.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\ChooseAtRandom.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\DetachEnchantment.ts" />
     <TypeScriptCompile Include="src\hs\hsActions\technical\DispatchEvent.ts" />
@@ -149,6 +156,7 @@
     <TypeScriptCompile Include="src\hs\model\card\HeroPower.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Minion.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Player.ts" />
+    <TypeScriptCompile Include="src\hs\model\card\Secret.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Spell.ts" />
     <TypeScriptCompile Include="src\hs\model\card\Weapon.ts" />
     <TypeScriptCompile Include="src\hs\model\mechanic\Aura.ts" />
@@ -160,6 +168,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="TODO.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\hs\hsActions\old\param\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
